<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:textSize="30sp"
        android:id="@+id/movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/movie_img"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_gravity="center"
        android:scaleType="centerCrop" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
    <Button
        android:id="@+id/like_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/like"
        android:layout_gravity="end|top"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/recommendation_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recommendation"
        android:layout_gravity="end|top"
        android:layout_marginEnd="16dp"
        />
    </LinearLayout>

    <TextView
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/movie_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:layout_marginTop="25dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:textSize="17sp"
        android:id="@+id/movie_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:textSize="18sp"
        android:text="@string/vo"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/movie_vo"
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reference"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/movie_ref"
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popularity"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/popularity_item"
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vote_count"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/vote_count_item"
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vote_average"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/vote_average_item"
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>
