<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="360dp"
    android:layout_height="550dp"
    android:padding="@dimen/marginDefaultComponent"
    android:background="#C6DCFF"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="100dp"
        android:layout_height="150dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/popup_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop">
        </ImageView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/dialog_movie_title"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:text="@string/movie_s_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.341" />

    <ImageView
        android:id="@+id/dialog_close_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView2"
        android:layout_marginEnd="@dimen/marginDefaultComponent"/>

    <TextView
        android:id="@+id/dialog_vote_average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/vote_average"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/dialog_vo_value"
        app:layout_constraintTop_toBottomOf="@+id/dialog_vo_value" />

    <TextView
        android:id="@+id/dialog_vo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/vo"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/dialog_release_date_value"
        app:layout_constraintTop_toBottomOf="@+id/dialog_release_date_value" />

    <TextView
        android:id="@+id/dialog_vo_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/en"
        app:layout_constraintStart_toStartOf="@+id/dialog_vo"
        app:layout_constraintTop_toBottomOf="@+id/dialog_vo" />

    <TextView
        android:id="@+id/dialog_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/overview"
        app:layout_constraintStart_toStartOf="@+id/dialog_description_title"
        app:layout_constraintTop_toBottomOf="@+id/dialog_description_title" />

    <TextView
        android:id="@+id/dialog_release_date_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/na"
        app:layout_constraintStart_toStartOf="@+id/dialog_release_date"
        app:layout_constraintTop_toBottomOf="@+id/dialog_release_date" />

    <TextView
        android:id="@+id/dialog_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/release_date"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/dialog_description_title"
        app:layout_constraintTop_toBottomOf="@+id/dialog_overview" />

    <TextView
        android:id="@+id/dialog_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/overview"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <TextView
        android:id="@+id/popup_movie_vote_average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/na"
        app:layout_constraintStart_toStartOf="@+id/dialog_vote_average"
        app:layout_constraintTop_toBottomOf="@+id/dialog_vote_average" />


</androidx.constraintlayout.widget.ConstraintLayout>